[gd_scene load_steps=9 format=3 uid="uid://bc2aa1rsawbsq"]

[ext_resource type="Shader" path="res://resources/paletteSwap.gdshader" id="1_ygp0o"]
[ext_resource type="Texture2D" uid="uid://cwpk26tgxpe01" path="res://resources/palette_original.tres" id="2_3qibt"]
[ext_resource type="Texture2D" uid="uid://cd2dl1qs50xyt" path="res://resources/palette_p1.tres" id="3_xrpxf"]
[ext_resource type="Script" path="res://scenes/PlanetManager.gd" id="4_gffbk"]
[ext_resource type="PackedScene" uid="uid://dcni20q4two04" path="res://scenes/menus/LevelSelection.tscn" id="5_b4sqp"]
[ext_resource type="PackedScene" uid="uid://maxsekrbatm2" path="res://scenes/characters/player.tscn" id="5_qb8yy"]
[ext_resource type="PackedScene" uid="uid://goh4wv2xtju0" path="res://scenes/TransitionScreen.tscn" id="6_u5f8i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3y3wn"]
shader = ExtResource("1_ygp0o")
shader_parameter/num_colorsPalette = 4
shader_parameter/originalPalette = ExtResource("2_3qibt")
shader_parameter/replacePalette = ExtResource("3_xrpxf")

[node name="PlanetManager" type="Node2D"]
material = SubResource("ShaderMaterial_3y3wn")
script = ExtResource("4_gffbk")

[node name="Player" parent="." instance=ExtResource("5_qb8yy")]
z_index = 1
use_parent_material = true
position = Vector2(0, -1)

[node name="TransitionScreen" parent="." instance=ExtResource("6_u5f8i")]

[node name="LevelSelection" parent="." instance=ExtResource("5_b4sqp")]

[connection signal="fadeInEnded" from="TransitionScreen" to="." method="_on_transition_screen_fade_in_ended"]
[connection signal="fadeOutEnded" from="TransitionScreen" to="." method="_on_transition_screen_fade_out_ended"]
